syntax = "proto3";

package auth_service;
option go_package = "gitlab.com/zimtox/auth_service";

message LoginRequest {
    string email    = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken  = 1;
    string refreshToken = 2;
    string status       = 3;
    string id           = 4;
    string firstName    = 5;
    string lastName     = 6;
}

message LogoutRequest {
    string token = 1;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token  = 1;
    string refresh_token = 2;
}

message RegisterRequest {
    string email             = 1;
    string password          = 2;
    string first_name        = 3;
    string last_name         = 4;
    string organization_name = 5;
}

message EmailVerificationRequest {
    string email = 1;
    string code  = 2;
}

message SendCodeRequest {
    string email = 1;
}

message ParseOrganizationTokenRequest {
    string token = 1;
}

message ParseOrganizationTokenResponse {
    string org_id = 1;
}

message ParseUserTokenRequest {
    string token = 1;
}

message ParseUserTokenResponse {
    string id   = 1;
    string role = 2;
}