syntax = "proto3";

package user_service;
option go_package = "gitlab.com/zimtox/auth_service/generated/user_service";

message User {
    string id          = 1;
    string email       = 2;
    string password    = 3;
    string first_name  = 4;
    string last_name   = 5;
    string role        = 6;
    string avatar_id   = 7;
    string user_status = 8;
    string created_at  = 9;
    string updated_at  = 10;
}

message CreateUserRequest {
    string email           = 1;
    string password        = 2;
    string first_name      = 3;
    string last_name       = 4;
    string avatar_id       = 5;
    string role            = 6;
    string organization_id = 7;
}

message UserList {
    repeated User users = 1;
}

message GetUserByProperty {
    string email = 1;
}

message UpdateUser {
    string id         = 1;
    string first_name = 2;
    string last_name  = 3;
    string avatar_id  = 4;
}

message GetById {
    string id = 1;
}

message CreatedResponse {
    string id = 1;
}

message GetAllRequest {
    int32 limit    = 1;
    int32 offset   = 2;
    string search  = 3;
    string user_id = 4;
    string role    = 5;
}
